--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ export interface Props {
 	title?: string;
 }
 
-const { title = "Hotel Imperial" } = Astro.props;
+const { title = "" } = Astro.props;
 ---
 
 <!doctype html>
@@ -11,32 +11,14 @@ const { title = "Hotel Imperial" } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/src/assets/Logo NullBG.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<link rel="stylesheet" href="/src/styles/colors.css" />
 	</head>
-	<body>
-		<main>
+	<body class="m-0 p-0 w-full min-h-screen bg-background text-text">
+		<main class="min-h-screen flex flex-col">
 			<slot />
 		</main>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		padding: 0;
-		width: 100%;
-		min-height: 100vh;
-		background-color: var(--color-background);
-		color: var(--color-text);
-	}
-
-	main {
-		min-height: 100vh;
-		display: flex;
-		flex-direction: column;
-	}
-</style>
