--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../layouts/Layout.astro';
-// import { AuthProvider } from '../contexts/AuthContext';
-// import { AuthButton } from '../components/AuthButton';
-// import { CommentsSection } from '../components/CommentsSection';
-// import { StatsDashboard } from '../components/StatsDashboard';
+import Layout from '@/layouts/Layout.astro';
+// import { AuthProvider } from '@/contexts/AuthContext';
+// import { AuthButton } from '@/components/ui/AuthButton';
+// import { CommentsSection } from '@/components/features/CommentsSection';
+// import { StatsDashboard } from '@/components/features/StatsDashboard';
 ---
 
 <Layout title="">
