--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title = "" } = Astro.props;
 	</head>
 	<body class="m-0 p-0 w-full min-h-screen bg-background text-text">
 		<Navbar client:load />
-		<main class="min-h-screen flex flex-col pt-16">
+		<main class="min-h-screen flex flex-col">
 			<slot />
 		</main>
 	</body>
